@@ -24,7 +24,11 @@
 #include <kapp.h>
 #include <qmsgbox.h>
 
+#include "preview.h"
+#include <kfiledialog.h>
+
 QList<KWordShell>* KWordShell::s_lstShells = 0L;
+bool KWordShell::previewHandlerRegistered = false;
 
 KWordShell::KWordShell()
 {
@@ -35,6 +39,25 @@ KWordShell::KWordShell()
     s_lstShells = new QList<KWordShell>;
   
   s_lstShells->append( this );
+
+  if (!previewHandlerRegistered) 
+    {
+      KFilePreviewDialog::registerPreviewModule("wmf",wmfPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("gif",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("jpeg",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("jpg",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("xpm",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("xbm",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("png",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("WMF",wmfPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("GIF",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("JPEG",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("JPG",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("XPM",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("XBM",pixmapPreviewHandler,PreviewPixmap);
+      KFilePreviewDialog::registerPreviewModule("PNG",pixmapPreviewHandler,PreviewPixmap);
+      previewHandlerRegistered = true;
+    }
 }
 
 KWordShell::~KWordShell()
