@@ -667,18 +667,18 @@ void KWordView::viewFooter()
 /*===============================================================*/
 void KWordView::insertPicture()
 {
-  QString file = KFileDialog::getOpenFileName(0,
-					      i18n("*.gif *GIF *.bmp *.BMP *.xbm *.XBM *.xpm *.XPM *.pnm *.PNM "
-					      "*.PBM *.PGM *.PPM *.PBMRAW *.PGMRAW *.PPMRAW *.jpg *.JPG *.jpeg *.JPEG"
-					      "*.pbm *.pgm *.ppm *.pbmdraw *.pgmdraw *.ppmdraw|All pictures\n"
-					      "*.gif *.GIF|GIF-Pictures\n"
-					      "*.jpg *.JPG *.jpeg *.JPEG|JPEG-Pictures\n"
-					      "*.bmp *.BMP|Windows Bitmaps\n"
-					      "*.xbm *.XBM|XWindow Pitmaps\n"
-					      "*.xpm *.XPM|Pixmaps\n"
-					      "*.pnm *.PNM *.PBM *.PGM *.PPM *.PBMRAW *.PGMRAW *.PPMRAW "
-					      "*.pbm *.pgm *.ppm *.pbmdraw *.pgmdraw *.ppmdraw|PNM-Pictures"),0);
-
+  QString file = KFilePreviewDialog::getOpenFileName(0,
+						     i18n("*.gif *GIF *.bmp *.BMP *.xbm *.XBM *.xpm *.XPM *.pnm *.PNM "
+							  "*.PBM *.PGM *.PPM *.PBMRAW *.PGMRAW *.PPMRAW *.jpg *.JPG *.jpeg *.JPEG"
+							  "*.pbm *.pgm *.ppm *.pbmdraw *.pgmdraw *.ppmdraw|All pictures\n"
+							  "*.gif *.GIF|GIF-Pictures\n"
+							  "*.jpg *.JPG *.jpeg *.JPEG|JPEG-Pictures\n"
+							  "*.bmp *.BMP|Windows Bitmaps\n"
+							  "*.xbm *.XBM|XWindow Pitmaps\n"
+							  "*.xpm *.XPM|Pixmaps\n"
+							  "*.pnm *.PNM *.PBM *.PGM *.PPM *.PBMRAW *.PGMRAW *.PPMRAW "
+							  "*.pbm *.pgm *.ppm *.pbmdraw *.pgmdraw *.ppmdraw|PNM-Pictures"),0);
+  
   if (!file.isEmpty()) m_pKWordDoc->insertPicture(file,gui->getPaperWidget());
 }
 
@@ -815,17 +815,17 @@ void KWordView::toolsCreateText()
 void KWordView::toolsCreatePix()
 {
   gui->getPaperWidget()->mmEdit();
-  QString file = KFileDialog::getOpenFileName(0,
-					      i18n("*.gif *GIF *.bmp *.BMP *.xbm *.XBM *.xpm *.XPM *.pnm *.PNM "
-						   "*.PBM *.PGM *.PPM *.PBMRAW *.PGMRAW *.PPMRAW *.jpg *.JPG *.jpeg *.JPEG"
-						   "*.pbm *.pgm *.ppm *.pbmdraw *.pgmdraw *.ppmdraw|All pictures\n"
-						   "*.gif *.GIF|GIF-Pictures\n"
-						   "*.jpg *.JPG *.jpeg *.JPEG|JPEG-Pictures\n"
-						   "*.bmp *.BMP|Windows Bitmaps\n"
-						   "*.xbm *.XBM|XWindow Pitmaps\n"
-						   "*.xpm *.XPM|Pixmaps\n"
-						   "*.pnm *.PNM *.PBM *.PGM *.PPM *.PBMRAW *.PGMRAW *.PPMRAW "
-						   "*.pbm *.pgm *.ppm *.pbmdraw *.pgmdraw *.ppmdraw|PNM-Pictures"),0);
+  QString file = KFilePreviewDialog::getOpenFileName(0,
+						     i18n("*.gif *GIF *.bmp *.BMP *.xbm *.XBM *.xpm *.XPM *.pnm *.PNM "
+							  "*.PBM *.PGM *.PPM *.PBMRAW *.PGMRAW *.PPMRAW *.jpg *.JPG *.jpeg *.JPEG"
+							  "*.pbm *.pgm *.ppm *.pbmdraw *.pgmdraw *.ppmdraw|All pictures\n"
+							  "*.gif *.GIF|GIF-Pictures\n"
+							  "*.jpg *.JPG *.jpeg *.JPEG|JPEG-Pictures\n"
+							  "*.bmp *.BMP|Windows Bitmaps\n"
+							  "*.xbm *.XBM|XWindow Pitmaps\n"
+							  "*.xpm *.XPM|Pixmaps\n"
+							  "*.pnm *.PNM *.PBM *.PGM *.PPM *.PBMRAW *.PGMRAW *.PPMRAW "
+							  "*.pbm *.pgm *.ppm *.pbmdraw *.pgmdraw *.ppmdraw|PNM-Pictures"),0);
   if (!file.isEmpty())
     {
       gui->getPaperWidget()->mmCreatePix();
